# battery-optimization-belgium

./: .cache.sqlite  .gitignore  README.md  create_solar_forecast_nb.py  pyproject.toml  pyrightconfig.json  streamlit_app.py
.streamlit/: config.toml
Data/: load_profile.csv  prices_be.csv  weather_antwerp.csv
Data/prepared/: load_clean.csv  prices_clean.csv  weather_clean.csv
Data/real_load/Final/: consumption_forecast.csv  dag_zon_met_verhoudingen.csv  optimization_input.csv  solar_forecast.csv  weather_personal.csv
forecasting/notebooks/: 11_price_forecast_horizon.ipynb
notebooks/: 01_data_collection.ipynb  03_optimization.ipynb  my_noteboek.ipynb
optimization/: streamlit_app.py
optimization/notebooks/: 01_data_collection.ipynb  02_eda.ipynb  03_optimization.ipynb
optimization/results/: backtest_lp.csv  backtest_threshold.csv  consumption_sensitivity.csv
optimization/src/: battery_utils.py
personal_optimization/: app.py
personal_optimization/models/: consumption_model.pkl
personal_optimization/notebooks/: 01_eda_real_load.ipynb  03_optimization_solar.ipynb  04_consumption_forecast.ipynb  05_solar_forecast.ipynb
personal_optimization/results/: backtest_lp_allin.csv  backtest_lp_dagNacht.csv  backtest_lp_epex.csv  backtest_lp_solar.csv  backtest_rule_allin.csv  backtest_rule_dagNacht.csv  backtest_rule_epex.csv  backtest_threshold_solar.csv  s10_summary.csv  s10b_rough_epex.csv  s10d_ml_epex.csv  s10e_ml_dagnight.csv  s10f_rough_dagnight.csv  s11d_ml_solar_epex.csv  s11e_ml_solar_dagnight.csv
personal_optimization/src/: solar_utils.py
(+12 files in other folders)
