[project]
name = "lp-thuisbatterij"
version = "0.1.0"
description = ""
authors = [
    {name = "Kateryna Maiatska",email = "katerynamaiatska@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "openmeteo-requests (>=1.7.5,<2.0.0)",
    "requests-cache (>=1.3.2,<2.0.0)",
    "retry-requests (>=2.0.0,<3.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "entsoe-py (>=0.8.0,<0.9.0)",
    "pulp (>=2.9.0,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "demandlib (>=0.2.2,<0.3.0)",
    "streamlit (>=1.45.0,<2.0.0)",
    "streamlit-option-menu (>=0.4.0,<1.0.0)",
    "scikit-learn (>=1.6.0,<2.0.0)",
    "joblib (>=1.4.0,<2.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
